fix: improve A11Y, style visible outline for logo and theme btn, add visible focus indicator for search input

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -57,4 +57,7 @@
     .theme-icon.light {
         @apply text-black;
     }
+    .outline-style {
+        @apply outline outline-2  outline-[#5EB0EF] dark:outline-[#1276E2];
+    }
 }
